--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             </div>
         </div>
         <div class="frame">
-            <iframe src="https://greyrecreate.netlify.app/" title="muwa"></iframe>
+            <iframe src="https://muwa.netlify.app/" title="muwa"></iframe>
         </div>
     </section>
 
