--- a/index.html
+++ b/index.html
@@ -329,7 +329,15 @@
         </div>
     </section>
 
-    <section  class="creative-section">
+    <section class="creative-section">
+        <div>
+            <p>Creative</p>
+            <div><img src="images/Ellipse.svg" alt="" /></div>
+        </div>
+        <div>
+            <p>Creative</p>
+            <div><img src="images/Ellipse.svg" alt="" /></div>
+        </div>
         <div>
             <p>Creative</p>
             <div><img src="images/Ellipse.svg" alt="" /></div>
@@ -519,7 +527,7 @@
             <div><img src="images/Ellipse.svg" alt="" /></div>
         </div>
     </section>
-
+    
     <section id="section-4">
         <div>
             <div class="sub-title">
