--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                <img src="images/sec1-space.svg" alt="space art" /> 
             </div>
         </div>
-        <p>
-            Extra Ordinary 
-            <span>products</span> for super 
-            extra ordinary 
+        <div id="main-text">
+            Extra Ordinary<hr> 
+            <span>products</span> for super<hr> 
+            extra ordinary<hr> 
             clients.
-        </p>
+        </div>
         <div id="side-yellow" class="dsf-mobile"></div>
     </section>
 
@@ -563,14 +563,11 @@
             <div id="testimonial-line"></div>
             <p>Testimonies</p>
             </div>
-            <div>
-               <!-- <img src="images/spaceship.svg" alt="" />  -->
-            </div>
         </div>
         <p id="testimonial-text">Business and user goals achieved through design.</p>
         <div  id="section-5-flex-2" class="section-5-flex">
-            <div class="profile-container">
-                <div class="profile">
+            <div class="left-container">
+                <div class="left-profile">
                     <div>
                     <img src="images/testimonial-1.png" alt="" />
                     </div>
@@ -583,8 +580,8 @@
                     I'm glad I decided to work with you. It's really great how I don’t have people manually call me to place an order, they handle it themselves.
                 </p>
             </div>
-            <div class="profile-container">
-                <div class="profile">
+            <div class="right-container">
+                <div class="right-profile">
                     <div>
                     <img src="images/testimonial-2.png" alt="" />
                     </div>
@@ -599,8 +596,8 @@
             </div>
         </div>
         <div id="section-5-flex-3" class="section-5-flex">
-            <div class="profile-container">
-                <div class="profile">
+            <div class="left-container">
+                <div class="left-profile">
                     <div>
                     <img src="images/testimonial-3.png" alt="" />
                     </div>
@@ -613,8 +610,8 @@
                     Having FATIMA handle my brands branding is definitely one of the best decisions I’ve made while running my business.
                 </p>
             </div>
-            <div  class="profile-container">
-                <div class="profile">
+            <div  class="right-container">
+                <div class="right-profile">
                     <div>
                     <img src="images/testimonial-4.png" alt="" />
                     </div>
